--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}專題系統{% endblock %}</title>
+    <link rel="icon" href="{% static 'img/Logo_Home.png' %}" type="image/png">
     {% block meta %}
     {% endblock %}
     <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js"></script>
